# fox3dengine

./: .gitignore  CMakeLists.txt  README.md  default.frag  default.vert  flash.gltf  light.frag  light.vert  main.cpp
f3d/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h
f3d/shaders/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shader.cpp  shader.h
include/glad/: glad.h
include/json/: json.hpp
src/: glad.c
